<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/settings_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/settings_customize_colors_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/settings_customize_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/customize_colors"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_autoplay_videos_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_autoplay_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/autoplay_videos"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_max_brightness_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_max_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/max_brightness"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_crop_thumbnails_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_crop_thumbnails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/crop_thumbnails"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_dark_background_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_dark_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/dark_background_at_fullscreen"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_scroll_horizontally_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_scroll_horizontally"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/scroll_thumbnails_horizontally"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_hide_system_ui_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_hide_system_ui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/hide_system_ui_at_fullscreen"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_delete_empty_folders_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_delete_empty_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/delete_empty_folders"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_allow_video_gestures_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_allow_video_gestures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:text="@string/allow_video_gestures"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_screen_rotation_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="@dimen/bigger_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingTop="@dimen/bigger_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/settings_screen_rotation_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/settings_screen_rotation"
                android:layout_toStartOf="@+id/settings_screen_rotation"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/screen_rotation_by"/>

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/settings_screen_rotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:background="@null"
                android:clickable="false"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
